      them (e.g., #include "openeaagles/base/util/system.h") in combination with more
      explict references to them (e.g., base::msleep) makes it more obvious as to where
      they are defined and only defined where needed.

   Number class
     -- replaced constructor to handle defined 64-bit 'Integer64' datatype to standard
        64-bit integer 'int64_t'

--------------------------------------------------------------------------------
dafif library


--------------------------------------------------------------------------------
dis library


--------------------------------------------------------------------------------
glut library


--------------------------------------------------------------------------------
graphics library


--------------------------------------------------------------------------------
hla library

   -- added code to support HLA interface

--------------------------------------------------------------------------------
instruments library


--------------------------------------------------------------------------------
iodevice library


--------------------------------------------------------------------------------
linearsystem library



--------------------------------------------------------------------------------
maps library


--------------------------------------------------------------------------------
models library

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)
         of the model itself.  Slot parameter accepts an integer value.

--------------------------------------------------------------------------------
otw library


--------------------------------------------------------------------------------
recorder library


--------------------------------------------------------------------------------
simulation library

   Autopilot class